
Version (SVN)
-------------

JDO:   Resolved issue CASTOR-1461 using contribution from Dave Brosius [dbrosius@qis.net]
       Used local variable instead of refetching it.
       Details: http://jira.codehaus.org/browse/CASTOR-1461
       (Ralf - 20060626)

XML:   Resolved issue CASTOR-1462 using contribution from Dave Brosius [dbrosius@qis.net]
       Moved wrongly placed parenthesis that caused toString() being executed for no reason.
       Details: http://jira.codehaus.org/browse/CASTOR-1462
       (Ralf - 20060626)

All:   Resolved issue CASTOR-1456 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Extracted creation of MappingLoaders from Mapping into new MappingLoaderRegistry.
       Details: http://jira.codehaus.org/browse/CASTOR-1456
       (Ralf - 20060624)

JDO:   Fixed bug CASTOR-1454 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Moved code to unmarshal Castor JDO configuration file to JDOConfFactory.
       Details: http://jira.codehaus.org/browse/CASTOR-1454
       (Werner - 20060624)

JDO:   Fixed bug CASTOR-1450 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Add getCurrentTransaction() to AbstractDatabaseImpl.
       Details: http://jira.codehaus.org/browse/CASTOR-1450
       (Werner - 20060620)

JDO:   Resolved issue CASTOR-1435 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Refactored internal handling of identities.
       Details: http://jira.codehaus.org/browse/CASTOR-1435
       (Ralf - 20060617)

XML:   Fixed bug CASTOR-1449 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Re-generated class files from jdo-conf.xsd.
       Details: http://jira.codehaus.org/browse/CASTOR-1449
       (Werner - 20060616)

XML:   Fixed bug CASTOR-480 using contribution from Michal Stochmialek [michal.stochmialek@eurobank.pl]
       Avoid generation of unnecessary import statements in generated source.