@@ -2,6 +2,11 @@
 Version (SVN)
 -------------
 
+XML:   Resolved issue CASTOR-1460 using contribution from Dave Brosius [dbrosius@qis.net]
+       Fixed bad boolean test.
+       Details: http://jira.codehaus.org/browse/CASTOR-1460
+       (Ralf - 20060626)
+
 JDO:   Resolved issue CASTOR-1461 using contribution from Dave Brosius [dbrosius@qis.net]
        Used local variable instead of refetching it.
        Details: http://jira.codehaus.org/browse/CASTOR-1461
